--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,28 @@
+name: YouTube Automation
 
+on:
+  schedule:
+    # Ogni giorno alle 10:00 UTC
+    - cron: '0 10 * * *'
+  workflow_dispatch: # permette di eseguire manualmente
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install moviepy gTTS google-api-python-client google-auth-httplib2 google-auth-oauthlib
+
+    - name: Run automation script
+      run: python scripts/short_generator.py
