--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,16 @@ jobs:
       with:
         python-version: '3.11'
 
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
+
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install moviepy gTTS google-api-python-client google-auth-httplib2 google-auth-oauthlib
+        pip install moviepy
+        pip install gTTS
+        pip install google-api-python-client
+        pip install google-auth-httplib2
+        pip install google-auth-oauthlib
 
     - name: Run automation script
       run: python scripts/short_generator.py
