--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: Install system dependencies
+      run: sudo apt-get update && sudo apt-get install -y ffmpeg
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -19,7 +22,7 @@ jobs:
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
 
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         pip install moviepy
         pip install gTTS
